# liquidwar-io

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
client-wasm/: Cargo.toml
client-wasm/src/: lib.rs
crate/: Cargo.toml
crate/src/: constants.rs  grid.rs  kernels.rs  lib.rs  particle.rs  sph.rs
docs-site/: Cargo.toml
docs-site/data/: maps_data.json
docs-site/public/: robots.txt  sitemap.xml
docs-site/src/: app.rs  lib.rs  main.rs
docs-site/src/components/: footer.rs  map_card.rs  mod.rs  nav.rs  page_head.rs
docs-site/src/data/: maps.rs
docs-site/src/pages/: credits.rs  history.rs  home.rs  how_to_play.rs  map_detail.rs  maps_gallery.rs  mechanics.rs  mod.rs  multiplayer.rs  settings.rs
docs-site/style/: main.scss
game/: Cargo.toml
game/src/: autoplay.rs  constants.rs  cursor.rs  fighter.rs  game.rs  gradient.rs  lib.rs  map.rs  mesh.rs
public/: manifest.json
public/maps/: index.json
public/maptex/: index.json
public/textures/: index.json
scripts/: extract-map-data.mjs  gen-icons.mjs  generate-sitemap.mjs  update-map-index.mjs
server/: Cargo.toml
server/src/: main.rs
src/: audio.ts  input.ts  main.ts  net.ts  renderer.ts  scene.ts
