[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
game = { path = "../game" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
